Fixed the z-index of the footer.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,7 @@ $z-layers: (
 }
 
 #footer-wrapper {
+  z-index: z("navbar");
   position: fixed;
   width: 100%;
   bottom: 0;
